--- a/Customer.xhtml
+++ b/Customer.xhtml
@@ -5,7 +5,7 @@ xmlns:h="http://xmlns.jcp.org/jsf/html"
  xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
+<title>SohamGlobal</title>
 </head>
 <body>
 <h2><h:outputLabel>Discount calculator</h:outputLabel></h2>
