--- a/Discount.xhtml
+++ b/Discount.xhtml
@@ -5,11 +5,11 @@ xmlns:h="http://xmlns.jcp.org/jsf/html"
  xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
+<title>SohamGlobal</title>
 </head>
 <body>
 <h2>Now showing discount</h2>
 <hr/>
-<h:outputLabel value="#{discountCalculator.discount}"></h:outputLabel>
+Discount : <h:outputLabel value="#{discountCalculator.discount}"></h:outputLabel>
 </body>
 </html>
